# hn_local_image

./: .env.example  .gitignore  MANIFEST.in  README.md  RELEASE_NOTES.md  fetcher.py  generator.py  main.py  processor.py  prompter.py  pyproject.toml
.github/workflows/: release.yml
hn_local_image_assets/: __init__.py
hn_local_image_assets/skills/: __init__.py
hn_local_image_assets/skills/hn-local-image/: SKILL.md
hn_local_image_assets/skills/hn-local-image/agents/: openai.yaml
skills/hn-local-image/: SKILL.md
