[project]
name = "hn-local-image"
version = "0.1.0"
description = "Generates daily AI art from Hacker News headlines using local Apple Silicon"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "mflux>=0.18.0",
    "mlx-vlm>=0.4.3",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "typer>=0.26.7",
]

[project.scripts]
hn-local-image = "main:app"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "fetcher", "prompter", "generator", "processor"]
